styles/styles.css
/* ... */
.default-content-wrapper a:not(.button):any-link {
    color: var(--text-pink);
    font-weight: var(--link-font-weight);
}

main input {
    font-size: 2rem;
    width: 100%;
    max-width: 800px;
    display: block;
    margin-bottom: 16px;
    padding: 12px 9.6px;
    border-radius: 4px;
    box-sizing: border-box;
    border: 1px solid var(--text-color);
    color: var(--text-color);
    background-color: var(--background-color);
}

main input:hover {
    border: 1px solid var(--text-color);
}

main blockquote {
    font-style: italic;
    margin: 48px;
    text-indent: -16px;
    hanging-punctuation: first;
}

main blockquote p::before {
    content: "“";
    line-height: 0;
}

main blockquote p::after {
    content: "”";
    line-height: 0;
}

.icon {
    display: inline-block;
    height: 24px;
    width: 24px;
}

.icon img {
    height: 100%;
    width: 100%;
}

main .section, .section .reset-spacing {
    padding: 20px 16px;
}

main .section.no-space-bottom {
    padding-bottom: 0;
}

main .section.no-space-bottom + .section {
    padding-top: 0;
}

main .section.grey {
    background-image: url('../images/bg_white-lines-tall-without-top_down-arrow.png');
    background-repeat: no-repeat;
    background-position: top center;
    background-size: cover;
}

main .section.buttons {
    padding-top: 0;
    padding-bottom: 0;
    border-top: 1px solid var(--color-grey-5);
    border-bottom: 1px solid var(--color-grey-5);
}

.home .columns-row img {
    transform: scale(0.67);
}

@media (min-width: 900px) {
    main .section, .section .reset-spacing {
        padding: 30px 32px;
    }

    main .section:nth-last-of-type(2) {
        padding-bottom: 22px;
    }

    .home .columns-row img {
        transform: scale(1);
    }

    .home .columns-row:nth-of-type(2) img {
        transform: scale(1) translate(-105px, -30px);
    }

    .home .columns-row:nth-of-type(4) img {
        transform: scale(1) translate(-63px, 26px);
    }
}

@media (min-width: 900px) {
    .section > div, .section .reset-spacing {
        max-width: var(--page-max-width);
        margin: auto;
    }

    .section .reset-spacing {
        padding-left: 0;
        padding-right: 0;
    }

    a.button:any-link, button {
        font-size: 2rem;
        line-height: 2rem;
        padding: 0 25px;
        height: 35px;
    }

    a.button.secondary:any-link, button.secondary {
        font-size: var(--body-font-size-s);
        font-weight: var(--font-weight-bold);
    }

    a.button.secondary::after, button.secondary::after {
        width: 24px;
        height: 28px;
        margin-left: 10px;
    }
}

.home .columns-row > div {
    padding-bottom: 50px;
}

@media (min-width: 900px) {
    .home .columns-row > div {
        padding-bottom: 80px;
    }

    .home .columns-row:nth-of-type(2) > div {
        padding-bottom: 30px;
    }
}

main .section.highlight {
    background-color: var(--highlight-background-color);
}

main .section.highlight-1-container.highlight-2-container {
    padding-bottom: 0;
}

main .section.accordion-2-container.video-container {
    padding-top: 40px;
}

main .section.width-m > div,
main .section.width-s > div,
main .section.width-xs > div {
    margin-right: auto;
    margin-left: auto;
}

main .section.width-xs > div {
    max-width: 400px;
}

main .section.width-s > div {
    max-width: 600px;
}

main .section.width-m > div {
    max-width: 830px;
}

/* section metadata - backgrounds */
main .section[data-background] {
    position: relative;
    padding-left: 0;
    padding-right: 0;
}

main .section[data-background] > div {
    padding-left: 16px;
    padding-right: 16px;
}

@media (min-width: 600px) {
    main .section[data-background] > div {
        padding-left: 32px;
        padding-right: 32px;
    }

    main .section.accordion-2-container.video-container h2 {
        font-size: 4.5rem;
        margin-top: 0;
    }

    main .section.accordion-2-container.video-container p {
        font-size: var(--body-font-size-m);
    }
}

/* section metadata - text align and color */
main .section.white-text {
    color: white;
}

main .section.white-text h1 {
    color: white;
}

main .section.small-heading h1 {
    font-size: 1.9rem;
    text-transform: uppercase;
}

.breathing-room main .section.small-heading h1 {
    font-size: var(--heading-font-size-m);
}

@media (min-width: 900px) {
    .breathing-room main .section.small-heading h1 {
        font-size: 1.9rem;
    }

    main .section.centered a.button:any-link {
        margin: auto;
    }
}

main .section.green-accent .default-content-wrapper em {
    color: var(--color-green);
    font-style: normal;
    font-weight: 500;
}

main .section.green-accent .default-content-wrapper em u {
    font-family: var(--gotham-light-font-family);
    color: var(--color-white);
    text-decoration: none;
}

main .section.isi {
    font-size: 1.5rem;
    line-height: 1;
}

.what-is-copd h2
{
    font-size: var(--body-font-size-xl);
}

main .section.isi h2 {
    font-size: var(--heading-font-size-s);
    font-weight: 500;
    color: var(--text-orange);
    margin-bottom: 20px;
}

main div:not(.isi) .default-content-wrapper h2 {
    font-size: 2rem;
}

main .section.accordion-2-container.video-container h2 {
    font-size: var(--heading-font-size-xxl);
}

.what-is-copd div.boxes.block > div h2 {
    font-size: var(--body-font-size-xl);
}

.copd-stages-page div.boxes.block div h2 {
    margin: 0;
    font-size: 1.4rem;
    line-height: 15px;
    font-weight: 500;
}

main .section.accordion-2-container.video-container .accordion-2 h2 {
    font-size: 1.4rem;
}

@media (min-width: 900px) {
    main .section.accordion-2-container.video-container .accordion-2 h2 {
        font-size: 1.8rem;
    }
}

@media (min-width: 900px) {
    main .section.isi h2 {
        font-size: var(--heading-font-size-ml);
    }
}

main div:not(.isi) li {
    margin-top: 12px;
    margin-bottom: 12px;
}

main .section.isi ul {
    padding: 4px 0 11px 20px;
}
/* ... */

